<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuFragment">

    <Button
        android:id="@+id/btnIrAGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/ir_a_google"
        app:layout_constraintBottom_toTopOf="@+id/btnCompartirTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCompartirTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compartir_texto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIrAListado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_a_listado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCompartirTexto" />


    <Button
        android:id="@+id/btn_ir_a_configuracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/ir_a_configuracin"
        app:layout_constraintEnd_toEndOf="@+id/btnIrAListado"
        app:layout_constraintStart_toStartOf="@+id/btnIrAListado"
        app:layout_constraintTop_toBottomOf="@+id/btnIrAListado" />
</androidx.constraintlayout.widget.ConstraintLayout>